<resources>
    <string name="app_name">YOUNG STORE</string>
    <string name="Login_Text">Login</string>
    <string name="Login_User">Usuário:</string>
    <string name="Login_Pass">Senha:</string>
    <string name="Text_Register">Se não possui conta, cadastre-se <font color="#ff0000 / #f00">aqui.</font></string>
    <string name="Text_Button_Login">Entrar</string>
    <string name="Register_name">Nome Completo:</string>
    <string name="Register_Email">Email:</string>
    <string name="Register_Email_Conf">Confirme seu e-mail:</string>
    <string name="Register_Pass">Senha:</string>
    <string name="Register_Pass_Conf">Confirme sua senha:</string>
    <string name="Register_Create">Criar cadastro</string>
    <string name="Register_Pass_info">Precisa ter entre 8 e 20 caracteres</string>
    <string name="Str_Logo">Logo</string>
    <string name="produto_imagem">produto_imagem</string>
    <string name="produto_titulo">produto_titulo\n</string>
    <string name="produto_preco">produto_preco</string>


    <string name="menu_bottom_bar_home">Home</string>
    <string name="menu_bottom_bar_categorias">Categorias</string>
    <string name="menu_bottom_bar_carrinho">Carrinho</string>
    <string name="menu_bottom_bar_conta">Conta</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categorias">Categorias</string>

    <string name="title_activity_team">TeamActivity</string>
    <string name="Txt_Pesquisar">Pesquisar</string>
    <string name="imagemconta">Imagemconta</string>
</resources>