<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <ImageView
        android:id="@+id/iv_Logo"
        android:layout_width="match_parent"
        android:layout_height="336dp"
        android:layout_marginTop="-20dp"
        android:src="@drawable/logo_home"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/Et_Name"
        android:layout_width="349dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle_user_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_Register_Name"
        app:srcCompat="@drawable/rectangle_user_pass" />

    <EditText
        android:id="@+id/Et_Email"
        android:layout_width="349dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle_user_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_Email"
        app:srcCompat="@drawable/rectangle_user_pass" />

    <EditText
        android:id="@+id/Et_Email_Conf"
        android:layout_width="349dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle_user_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_Email_Conf"
        app:srcCompat="@drawable/rectangle_user_pass" />

    <EditText
        android:id="@+id/Et_Pass"
        android:layout_width="349dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle_user_pass"
        android:hint="@string/Register_Pass_info"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Pass"
        app:srcCompat="@drawable/rectangle_user_pass" />

    <EditText
        android:id="@+id/Et_Pass_Conf"
        android:layout_width="349dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle_user_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_Pass_Conf"
        app:srcCompat="@drawable/rectangle_user_pass" />

    <TextView
        android:id="@+id/Tv_Register_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Register_name"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_Logo" />

    <TextView
        android:id="@+id/Tv_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Register_Email"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Et_Name" />

    <TextView
        android:id="@+id/Tv_Email_Conf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Register_Email_Conf"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Et_Email" />

    <TextView
        android:id="@+id/tv_Pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Register_Pass"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Et_Email_Conf" />

    <TextView
        android:id="@+id/Tv_Pass_Conf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Register_Pass_Conf"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Et_Pass" />

    <Button
        android:id="@+id/Bt_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:backgroundTint="@color/black"
        android:text="@string/Register_Create"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Et_Pass_Conf" />

</androidx.constraintlayout.widget.ConstraintLayout>