<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".TelaProdutos">

    <View
        android:id="@+id/fundo_imagens_detalhes"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:background="@drawable/bg_item_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/acProdutoIvimagem"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/produto_imagem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <RelativeLayout
        android:id="@+id/Bg_Produtos_Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_item_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fundo_imagens_detalhes">

        <TextView
            android:id="@+id/acProdutoTvtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:layout_marginStart="149dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="-129dp"
            android:layout_marginBottom="10dp"
            android:gravity=""
            android:text="@string/produto_titulo"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/acProdutoTvPreco"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/acProdutoTvtitulo"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="50dp"
            android:text="@string/produto_preco"
            android:textColor="@color/design_default_color_error"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/acProdutoTvtitulo"
            android:layout_marginStart="270dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_carrinho" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>